--- a/src/index.html
+++ b/src/index.html
@@ -197,16 +197,7 @@
         <h2 class="timer__title">Course. Focus To Do: design.</h2>
         <div class="timer__content">
           <svg class="timer__progress" viewBox="0 0 240 240">
-            <defs>
-              <linearGradient id="gradient">
-                <stop offset="0%" stop-color="rgb(255 175 175 / 0.9)" />
-                <stop offset="100%" stop-color="rgb(255 175 175 / 0.9)" />
-              </linearGradient>
-            </defs>
-            <g id="ticks">
-              <line x1="120" y1="6" x2="120" y2="18" stroke="rgb(255 255 255 / 0.2)" stroke-width="4.5" stroke-linecap="round" />
-            </g>
-            <circle class="timer__circle" stroke="url(#gradient)"/>
+            <circle class="timer__circle"/>
           </svg>
           <span class="timer__time">25:00</span>
         </div>
