--- a/src/index.html
+++ b/src/index.html
@@ -193,15 +193,15 @@
 
   <div class="overlay">
     <div class="overlay__container container">
-      <div class="timer" data-timer-deadline="1">
-        <h2 class="timer__title">Course. Focus To Do: design.</h2>
+      <div class="timer">
+        <h2 class="timer__title"></h2>
         <div class="timer__content">
           <svg class="timer__progress" viewBox="0 0 240 240">
             <circle class="timer__circle"/>
           </svg>
-          <span class="timer__time">25:00</span>
+          <span class="timer__time"></span>
         </div>
-        <button class="timer__button button button--accent" type="button">Start</button>
+        <button class="timer__button button button--accent" type="button">Pause</button>
       </div>
     </div>
   </div>
