style: Refactor timer progress styling
* Add CSS property background-linear-gradient.
* Use ::before and ::after pseudo-elements to create the progress bar.
* Update animation code to work with the new CSS structure.

--- a/src/index.html
+++ b/src/index.html
@@ -196,9 +196,9 @@
       <div class="timer">
         <h2 class="timer__title"></h2>
         <div class="timer__content">
-          <svg class="timer__progress" viewBox="0 0 240 240">
-            <circle class="timer__circle"/>
-          </svg>
+          <div class="timer__progress">
+            <span class="visually-hidden">Progress bar</span>
+          </div>
           <span class="timer__time"></span>
         </div>
         <button class="timer__button button button--accent" type="button">Pause</button>
