feat: Implement timer button handlers

--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,10 @@
           </div>
           <span class="timer__time"></span>
         </div>
-        <button class="timer__button button button--accent" type="button">Pause</button>
+        <div class="timer__buttons">
+          <button class="timer__button button button--accent" type="button" data-state="pause">Pause</button>
+          <button class="timer__button timer__button--hide button button--accent" type="button">Stop</button>
+        </div>
       </div>
     </div>
   </div>
