fix: Enhance modal accessibility
* Add role="dialog" and aria-hidden="true" to overlay.
* Improve focus management.

--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
     </div>
   </div>
 
-  <div class="overlay">
+  <div class="overlay" aria-hidden="true" role="dialog" aria-label="Settings">
     <div class="overlay__container container">
       <form class="settings">
         <button class="settings__close-button button button--cross" type="button">
@@ -191,7 +191,7 @@
     </div>
   </div>
 
-  <div class="overlay">
+  <div class="overlay" aria-hidden="true" role="dialog" aria-label="Timer">
     <div class="overlay__container container">
       <div class="timer">
         <h2 class="timer__title"></h2>
