feat: Add pomodoro tracking
* Add pomodoroDone property to Task
* Implement localStorage updates for tasks
* Display completed Pomodoro count

--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,7 @@
   <div class="overlay" aria-hidden="true" role="dialog" aria-label="Timer">
     <div class="overlay__container container">
       <div class="timer">
-        <h2 class="timer__title"></h2>
+        <div class="timer__header"></div>
         <div class="timer__content">
           <div class="timer__progress">
             <span class="visually-hidden">Progress bar</span>
